[gd_scene load_steps=17 format=3 uid="uid://dn60vyjh4fpbd"]

[ext_resource type="Texture2D" uid="uid://d081b071oeqiu" path="res://Textures/Icons/anim_0.png" id="1_dheow"]
[ext_resource type="Script" path="res://Scripts/UI/components/request_list_item.gd" id="2_em3nu"]
[ext_resource type="Texture2D" uid="uid://cu6lylhmt8ciu" path="res://Textures/Icons/anim_1.png" id="2_pn136"]
[ext_resource type="Texture2D" uid="uid://dtrjj2ceulm1n" path="res://Textures/Icons/anim_2.png" id="3_apuvp"]
[ext_resource type="Texture2D" uid="uid://bkcc823h0clki" path="res://Textures/Icons/anim_3.png" id="4_3flrv"]
[ext_resource type="Texture2D" uid="uid://cthkmsbwdwj8a" path="res://Textures/Icons/gold.png" id="5_ilow1"]
[ext_resource type="Texture2D" uid="uid://dsejrvql81x6p" path="res://Textures/Icons/avatar.png" id="7_7wt4c"]
[ext_resource type="Texture2D" uid="uid://7bcoq6h35a7o" path="res://Textures/Icons/check2.png" id="7_8uxh0"]
[ext_resource type="Texture2D" uid="uid://rjt00bwx41uj" path="res://Textures/Icons/flag.png" id="9_145du"]
[ext_resource type="Theme" uid="uid://m7mvoj5x6lb5" path="res://Resources/UI/main_theme.tres" id="10_1orss"]
[ext_resource type="Texture2D" uid="uid://b78rlbuhxaln7" path="res://Textures/Icons/mail.png" id="11_himki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6vu8"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iu8d0"]
bg_color = Color(0.729412, 0.776471, 0.854902, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_1f48w"]
frames = 4
frame_0/texture = ExtResource("1_dheow")
frame_0/duration = 0.12
frame_1/texture = ExtResource("2_pn136")
frame_1/duration = 0.12
frame_2/texture = ExtResource("3_apuvp")
frame_2/duration = 0.12
frame_3/texture = ExtResource("4_3flrv")
frame_3/duration = 0.12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18msh"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1pwq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="REQUEST_LIST_ITEM" type="Panel"]
custom_minimum_size = Vector2(300, 48)
theme = ExtResource("10_1orss")
theme_override_styles/panel = SubResource("StyleBoxFlat_q6vu8")
script = ExtResource("2_em3nu")

[node name="COMPLETE_BG" type="Panel" parent="."]
layout_mode = 0
offset_right = 301.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_iu8d0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ACTIVE_STRIP" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = SubResource("AnimatedTexture_1f48w")
expand_mode = 1
stretch_mode = 2

[node name="COMPLETED_STRIP" type="MarginContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="ACTIVE_STRIP2" type="TextureRect" parent="HBoxContainer/COMPLETED_STRIP"]
texture_filter = 1
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_8uxh0")
stretch_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 254.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 15
text = "Request Title"
text_overrun_behavior = 3

[node name="SUB_VALUES" type="HBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 24.0
offset_right = 234.0
offset_bottom = 44.0
theme_override_constants/separation = 8

[node name="GOLD" type="HBoxContainer" parent="HBoxContainer/Control/SUB_VALUES"]
layout_mode = 2
tooltip_text = "Gold Reward"
theme_override_constants/separation = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Control/SUB_VALUES/GOLD"]
layout_mode = 2
texture = ExtResource("5_ilow1")
stretch_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Control/SUB_VALUES/GOLD"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "9999"

[node name="REQUESTOR" type="HBoxContainer" parent="HBoxContainer/Control/SUB_VALUES"]
layout_mode = 2
tooltip_text = "Requestor"
theme_override_constants/separation = 2
alignment = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Control/SUB_VALUES/REQUESTOR"]
layout_mode = 2
texture = ExtResource("7_7wt4c")
stretch_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Control/SUB_VALUES/REQUESTOR"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Requestor"

[node name="LOCATION" type="HBoxContainer" parent="HBoxContainer/Control/SUB_VALUES"]
layout_mode = 2
tooltip_text = "Destination"
theme_override_constants/separation = 2
alignment = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Control/SUB_VALUES/LOCATION"]
layout_mode = 2
texture = ExtResource("9_145du")
stretch_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Control/SUB_VALUES/LOCATION"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Location"

[node name="open_btn" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -27.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 23.0
grow_horizontal = 0
tooltip_text = "Open Request"
mouse_default_cursor_shape = 2
theme = ExtResource("10_1orss")
theme_override_constants/h_separation = 1
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_18msh")
theme_override_styles/hover = SubResource("StyleBoxFlat_q1pwq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q1pwq")
icon = ExtResource("11_himki")
icon_alignment = 1

[connection signal="pressed" from="open_btn" to="." method="_on_open_btn_pressed"]
